--- a/android/res/layout/activity_splash.xml
+++ b/android/res/layout/activity_splash.xml
@@ -3,7 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashActivity" >
+    tools:context=".SplashActivity"
+    android:background="#fff" >
+    
+    <ImageView
+        android:src="@drawable/derpteam_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:contentDescription="@string/logo" />
 
 
 </RelativeLayout>
