--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".LoginActivity"
     android:orientation="vertical"
     android:background="#fff"
     android:padding="20dp" >
@@ -34,13 +34,6 @@
         android:layout_marginBottom="60dp"
         android:contentDescription="@string/cd_create_member"
         android:background="@drawable/create_member_btn" />
-	
-	<TextView
-	    android:id="@+id/username"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_gravity="center_horizontal"
-	    android:textSize="20sp" />
 	
 	<com.facebook.widget.LoginButton
         android:id="@+id/fb_login_button"
