--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -1,45 +1,17 @@
-<LinearLayout 
+<RelativeLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
-    android:orientation="vertical"
-    android:background="#fff"
+    tools:context=".MainActivity"
     android:padding="20dp" >
     
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="60dp"
-        android:layout_marginBottom="80dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:src="@drawable/derpteam_logo"
         android:contentDescription="@string/logo" />
-    
-    <ImageButton
-        android:id="@+id/btn_my_team"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="20dp"
-        android:contentDescription="@string/cd_my_team"
-        android:background="@drawable/my_team_btn" />
-    
-    <ImageButton
-        android:id="@+id/btn_create_member"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="60dp"
-        android:contentDescription="@string/cd_create_member"
-        android:background="@drawable/create_member_btn" />
-	
-	<com.facebook.widget.LoginButton
-        android:id="@+id/fb_login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp" />
 
-</LinearLayout>
+</RelativeLayout>
