--- a/android/res/layout/activity_login.xml
+++ b/android/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="60dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="120dp"
         android:src="@drawable/derpteam_logo"
         android:contentDescription="@string/logo" />
 	
@@ -21,7 +21,6 @@
         android:id="@+id/fb_login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp" />
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
