--- a/android/res/layout/activity_take_picture.xml
+++ b/android/res/layout/activity_take_picture.xml
@@ -6,9 +6,11 @@
     android:orientation="vertical" >
     
     <ImageView 
+        android:id="@+id/taken_picture"
         android:layout_width="fill_parent"
         android:layout_height="400dp"
-        android:src="@drawable/image_placeholder"/>
+        android:scaleType="fitXY"
+        android:src="@drawable/image_placeholder" />
     
     <LinearLayout
         android:layout_width="fill_parent"
