--- a/android/res/layout/activity_take_picture.xml
+++ b/android/res/layout/activity_take_picture.xml
@@ -17,7 +17,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="12dp"
-        android:background="#0099ff" >
+        android:background="#30acff" >
         
         <EditText
 			android:id="@+id/caption"
