--- a/android/res/layout/activity_login.xml
+++ b/android/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
     android:orientation="vertical"
-    android:background="#fff"
+    android:background="@drawable/purple_bg"
     android:padding="20dp" >
     
     <ImageView
