--- a/android/res/layout/activity_take_picture.xml
+++ b/android/res/layout/activity_take_picture.xml
@@ -34,6 +34,7 @@
     </LinearLayout>
     
     <Button
+        android:id="@+id/btn_assign_team"
         android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center_horizontal"
