--- a/android/res/layout/listview_row_friend.xml
+++ b/android/res/layout/listview_row_friend.xml
@@ -3,13 +3,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="horizontal"
+    android:padding="6dp" >
+    
+	<com.facebook.widget.ProfilePictureView
+		android:id="@+id/friend_picture"
+		android:layout_width="50dp"
+		android:layout_height="50dp"
+		android:layout_marginRight="14dp" />
     
     <TextView 
         android:id="@+id/friend_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp" />
+        android:layout_gravity="center_vertical"
+        android:textSize="20sp"
+        android:textStyle="bold" />
     
 
 </LinearLayout>
