--- a/android/res/layout/activity_pick_friend.xml
+++ b/android/res/layout/activity_pick_friend.xml
@@ -21,6 +21,7 @@
 	    android:id="@+id/fb_friend_listview"
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent"
+	    android:fastScrollEnabled="true"
 	    android:dividerHeight="1dp"
 	    android:divider="#30acff" />
 
