--- a/android/res/layout/activity_gallery.xml
+++ b/android/res/layout/activity_gallery.xml
@@ -2,8 +2,8 @@
 <GridView 
     xmlns:android="http://schemas.android.com/apk/res/android" 
 	android:id="@+id/gridview"
-	android:layout_width="fill_parent" 
-	android:layout_height="fill_parent"
+	android:layout_width="match_parent" 
+	android:layout_height="match_parent"
 	android:background="@drawable/purple_bg"
 	android:columnWidth="120dp"
 	android:verticalSpacing="6dp"
