--- a/android/res/layout/activity_take_picture.xml
+++ b/android/res/layout/activity_take_picture.xml
@@ -8,21 +8,21 @@
     
     <ImageView 
         android:id="@+id/taken_picture"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="400dp"
         android:scaleType="fitXY"
         android:src="@drawable/image_placeholder"
         android:contentDescription="@string/desc_taken_picture" />
     
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="12dp"
         android:background="#30acff" >
         
         <EditText
 			android:id="@+id/caption"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:gravity="center"
 			android:padding="10dp"
