--- a/android/res/layout/fragment_pick_friend.xml
+++ b/android/res/layout/fragment_pick_friend.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#fff" >
     
     <TextView
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
@@ -19,8 +19,8 @@
 	
 	<ListView
 	    android:id="@+id/fb_friend_listview"
-	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
 	    android:fastScrollEnabled="true"
 	    android:dividerHeight="1dp"
 	    android:divider="#30acff" />
