--- a/android/res/menu/main.xml
+++ b/android/res/menu/main.xml
@@ -2,11 +2,12 @@
     
     <item
         android:id="@+id/action_log_out"
-        android:title="@string/action_log_out" />
+        android:title="@string/action_log_out"
+        android:orderInCategory="1" />
 
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:orderInCategory="2"
         android:showAsAction="never"
         android:title="@string/action_settings" />
 
