--- a/android/res/layout/fragment_gallery.xml
+++ b/android/res/layout/fragment_gallery.xml
@@ -4,9 +4,11 @@
 	android:id="@+id/gridview"
 	android:layout_width="match_parent" 
 	android:layout_height="match_parent"
-	android:background="@drawable/purple_bg"
-	android:columnWidth="120dp"
-	android:verticalSpacing="6dp"
+	android:paddingTop="10dp"
+	android:paddingBottom="10dp"
+	android:background="#fff"
+	android:columnWidth="180dp"
+	android:verticalSpacing="8dp"
 	android:numColumns="auto_fit"
 	android:stretchMode="columnWidth"
 	android:gravity="center" />
