--- a/android/res/layout/fragment_main.xml
+++ b/android/res/layout/fragment_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    android:background="@drawable/purple_bg" >
+    android:background="#fff" >
     
     <ImageView
         android:id="@+id/logo"
