--- a/android/res/layout/fragment_take_picture.xml
+++ b/android/res/layout/fragment_take_picture.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/purple_bg" >
+    android:background="#fff" >
     
     <ImageView 
         android:id="@+id/taken_picture"
