--- a/android/res/layout/fragment_view_picture.xml
+++ b/android/res/layout/fragment_view_picture.xml
@@ -13,7 +13,8 @@
 	    
 	    <FrameLayout
 	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content" >
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center_horizontal" >
 	        
 	        <ImageView 
 		        android:id="@+id/derp_picture"
