--- a/android/res/layout/fragment_view_picture.xml
+++ b/android/res/layout/fragment_view_picture.xml
@@ -21,7 +21,7 @@
 		        android:layout_width="40dp"
 		        android:layout_height="40dp"
 		        android:layout_alignParentLeft="true"
-		        android:layout_marginRight="10dp"
+		        android:layout_marginRight="4dp"
 		        android:scaleType="fitXY"
 		        android:contentDescription="@string/desc_fb_picture"
 		        android:src="@drawable/fb_pic_placeholder" />
@@ -31,7 +31,8 @@
 	            android:layout_width="wrap_content"
 	        	android:layout_height="wrap_content"
 	        	android:layout_alignParentBottom="true"
-	        	android:layout_toRightOf="@id/fb_picture" />
+	        	android:layout_toRightOf="@id/fb_picture"
+	        	android:textSize="14sp" />
 	        
 	        <TextView 
 	            android:id="@+id/derp_title"
@@ -41,7 +42,7 @@
 	        	android:layout_alignParentRight="true"
 	        	android:textSize="16sp"
 	        	android:textStyle="bold"
-	        	android:text="title" />
+	        	android:text="title goes here" />
 	        
 	    </RelativeLayout>
 	    
