--- a/android/res/layout/fragment_view_picture.xml
+++ b/android/res/layout/fragment_view_picture.xml
@@ -32,17 +32,28 @@
 	        	android:layout_height="wrap_content"
 	        	android:layout_alignParentBottom="true"
 	        	android:layout_toRightOf="@id/fb_picture"
-	        	android:textSize="14sp" />
+	        	android:textSize="18sp"
+	        	android:textStyle="bold" />
 	        
-	        <TextView 
-	            android:id="@+id/derp_title"
-	            android:layout_width="wrap_content"
+	        <TextView
+	            android:id="@+id/possessive_form"
+	        	android:layout_width="wrap_content"
 	        	android:layout_height="wrap_content"
 	        	android:layout_alignParentBottom="true"
-	        	android:layout_alignParentRight="true"
-	        	android:textSize="16sp"
+	        	android:layout_toRightOf="@id/fb_name"
+	        	android:textSize="18sp"
 	        	android:textStyle="bold"
-	        	android:text="title goes here" />
+	        	android:text="@string/possessive_form" />
+	        
+	        <TextView 
+	            android:id="@+id/title"
+	            android:layout_width="wrap_content"
+	        	android:layout_height="wrap_content"
+	        	android:layout_marginLeft="5dp"
+	        	android:layout_alignParentBottom="true"
+	        	android:layout_toRightOf="@id/possessive_form"
+	        	android:textSize="18sp"
+	        	android:textStyle="bold" />
 	        
 	    </RelativeLayout>
 	    
