--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -5,6 +5,9 @@
 </header>
 
 <div class="container">
+	<div class="row">
+    	<h2 >Derp Team</h2>
+    </div>
     <div class="row">
     	Hey {{ you }}
     </div>
