--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -5,31 +5,36 @@
 </header>
 
 <div class="container">
-	<div class="row">
-    	<h2 >Derp Team</h2>
+
+    <div class="row">
+        <div class="col-md-12">
+            <h2 class="text-center">Derp Team</h2>
+        </div> 
     </div>
     <div class="row">
-    	Hey {{ you }}
+    	<div class="col-md-offset-3"></div>
+    	<div class="col-md-6">
+        	<h2><small class="text-center"> Hey {{ you }}, your friend {{ friend }} has recommended the following person to be on your team! Lucky you!</small></h2>
+    	</div>
+		<div class="col-md-offset-3"></div>   
     </div>
     
-    <div class="row">
-    	Your Friend: {{ friend }}
-    </div>
     
-    <div class="row">
-    	Recruited for your team:
-    </div>
     
-    <div class="row">
-    
-    	<img src="http://{{ imageUrl}}" />
+    <div class="row-fluid">
+    	<div class="col-md-12 text-center">
+	    	<img src="http://{{ imageUrl}}" />
+        </div>
     </div>
     <div class="row">
-    
-    {{title}}
+    	<div class="col-md-12 text-center">
+		    {{title}}
+        </div>
     </div>
     <div class="row">
-    
-    {{ caption }}
+    	<div class="col-md-12 text-center">
+		    {{caption}}
+        </div>
+    </div>
 	</div>
 </div>
