--- a/android/res/layout/fragment_view_picture.xml
+++ b/android/res/layout/fragment_view_picture.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
-    android:padding="20dp" >
+    android:background="#fff" >
 
 	<LinearLayout 
 	    android:layout_width="match_parent"
@@ -14,14 +13,14 @@
 	    <RelativeLayout
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
-	        android:layout_marginBottom="6dp" >
+	        android:padding="10dp" >
 	        
 	        <ImageView 
 		        android:id="@+id/fb_picture"
 		        android:layout_width="40dp"
 		        android:layout_height="40dp"
 		        android:layout_alignParentLeft="true"
-		        android:layout_marginRight="4dp"
+		        android:layout_marginRight="8dp"
 		        android:scaleType="fitXY"
 		        android:contentDescription="@string/desc_fb_picture"
 		        android:src="@drawable/fb_pic_placeholder" />
@@ -49,7 +48,7 @@
 	            android:id="@+id/title"
 	            android:layout_width="wrap_content"
 	        	android:layout_height="wrap_content"
-	        	android:layout_marginLeft="5dp"
+	        	android:layout_marginLeft="4dp"
 	        	android:layout_alignParentBottom="true"
 	        	android:layout_toRightOf="@id/possessive_form"
 	        	android:textSize="18sp"
@@ -64,10 +63,9 @@
 	        
 	        <ImageView 
 		        android:id="@+id/derp_picture"
-		        android:layout_width="320dp"
-		        android:layout_height="320dp"
+		        android:layout_width="match_parent"
+		        android:layout_height="360dp"
 		        android:scaleType="fitXY"
-		        android:background="@drawable/image_border"
 		        android:contentDescription="@string/desc_derp_picture" />
 	        
 	        <LinearLayout
@@ -76,9 +74,6 @@
 	        	android:layout_gravity="bottom"
 	        	android:paddingTop="4dp"
 	        	android:paddingBottom="4dp"
-	        	android:layout_marginBottom="5dp"
-	        	android:layout_marginLeft="5dp"
-	        	android:layout_marginRight="5dp"
 	        	android:orientation="horizontal"
 	        	android:background="@drawable/transparent_gradient" >
 	        	
@@ -106,17 +101,26 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:layout_marginTop="4dp"
+	        android:layout_marginBottom="4dp"
 	        android:gravity="center"
 	        android:textSize="18sp"
 	        android:textStyle="bold" />
 	    
-	    <TextView
+	    <LinearLayout 
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
-	        android:layout_marginTop="10dp"
-	        android:textSize="18sp"
-	        android:textStyle="bold"
-	        android:text="@string/comments" />
+	        android:orientation="horizontal"
+	        android:paddingLeft="10dp"
+	        android:paddingRight="10dp" >
+	        
+	        <ImageView
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:src="@drawable/comment_icon"
+	            android:contentDescription="@string/desc_comment_icon" />
+	        
+	        
+	    </LinearLayout>
 	
 	</LinearLayout>
 	
