--- a/android/res/layout/fragment_main.xml
+++ b/android/res/layout/fragment_main.xml
@@ -16,6 +16,7 @@
         android:contentDescription="@string/logo" />
     
     <FrameLayout
+        android:id="@+id/picture_frame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -61,6 +62,16 @@
 		</LinearLayout>
     </FrameLayout>
     
+    <TextView
+        android:id="@+id/caption"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/picture_frame"
+        android:layout_marginTop="4dp"
+        android:gravity="center_horizontal"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+    
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -95,25 +106,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Friends Teams" />
-        
-        <!--  
-        <ImageButton
-            android:id="@+id/take_picture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/camera_icon"
-            android:contentDescription="@string/desc_take_picture" />
-        
-        <ImageButton
-            android:id="@+id/show_gallery"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/gallery_icon"
-            android:contentDescription="@string/desc_show_gallery" />
-		-->
-        
+
     </LinearLayout>
 
 </RelativeLayout>
