--- a/android/res/layout/fragment_view_member.xml
+++ b/android/res/layout/fragment_view_member.xml
@@ -101,10 +101,48 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:layout_marginTop="4dp"
-	        android:layout_marginBottom="4dp"
 	        android:gravity="center"
 	        android:textSize="18sp"
 	        android:textStyle="bold" />
+	    
+	    <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:orientation="horizontal"
+	        android:padding="10dp" >
+	        
+	        <ImageView
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+		 		android:src="@drawable/arrow_up_small"
+		 		android:contentDescription="@string/desc_vote_up" />
+	        
+	        <TextView
+	            android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:layout_gravity="center_vertical"
+			    android:textColor="#00b200"
+			    android:textSize="16sp"
+			    android:textStyle="bold"
+			    android:text="21" />
+	        
+	        <ImageView
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:layout_marginLeft="10dp"
+		 		android:src="@drawable/arrow_down_small"
+		 		android:contentDescription="@string/desc_vote_down" />
+	        
+	        <TextView
+	            android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:layout_gravity="center_vertical"
+			    android:textColor="#cc0000"
+			    android:textSize="16sp"
+			    android:textStyle="bold"
+			    android:text="43" />
+	        
+	    </LinearLayout>
 	    
 	    <LinearLayout 
 	        android:layout_width="match_parent"
