--- a/android/res/layout/fragment_view_team.xml
+++ b/android/res/layout/fragment_view_team.xml
@@ -6,45 +6,11 @@
     android:orientation="vertical"
     android:background="#fff" >
     
-    <LinearLayout 
-        android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="center_horizontal"
-		android:layout_marginTop="10dp"
-		android:layout_marginBottom="20dp"
-		android:orientation="horizontal" >
-		
-        <TextView
-			android:id="@+id/name"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textSize="22sp"
-			android:textStyle="bold"
-			android:textColor="#30acff" />
-    
-	    <TextView
-	    	android:layout_width="wrap_content"
-	    	android:layout_height="wrap_content"
-	    	android:textSize="22sp"
-	    	android:textStyle="bold"
-	    	android:textColor="#30acff"
-	    	android:text="@string/possessive_form" />
-	    
-	    <TextView 
-	        android:layout_width="wrap_content"
-	    	android:layout_height="wrap_content"
-	    	android:layout_marginLeft="4dp"
-	    	android:textSize="22sp"
-	    	android:textStyle="bold"
-	    	android:textColor="#30acff"
-	    	android:text="@string/team" />
-        
-    </LinearLayout>
-    
     <ListView
         android:id="@+id/team_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:dividerHeight="0dp" />
+        android:dividerHeight="0dp"
+        android:divider="@null" />
 
 </LinearLayout>
