--- a/android/res/layout/listview_row_member.xml
+++ b/android/res/layout/listview_row_member.xml
@@ -3,11 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:paddingBottom="20dp" >
     
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:padding="10dp" >
         
         <ImageView 
 	        android:id="@+id/poster_fb_picture"
@@ -24,15 +26,16 @@
             android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:layout_alignParentBottom="true"
-        	android:layout_toRightOf="@id/fb_picture"
+        	android:layout_toRightOf="@id/poster_fb_picture"
         	android:textSize="18sp"
-        	android:textStyle="bold" />
+        	android:textStyle="bold"
+        	android:text="NAME" />
         
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@id/name"
-            android:layout_toRightOf="@id/fb_picture"
+            android:layout_above="@id/poster_name"
+            android:layout_toRightOf="@id/poster_fb_picture"
             android:textSize="18sp"
             android:text="@string/assigned_by" />
         
@@ -43,28 +46,66 @@
         	android:layout_alignParentBottom="true"
         	android:layout_alignParentRight="true"
         	android:textSize="18sp"
-        	android:textStyle="bold" />
+        	android:textStyle="bold"
+        	android:text="TITLE" />
         
     </RelativeLayout>
+        
+    <ImageView 
+		android:id="@+id/member"
+		android:layout_width="match_parent"
+		android:layout_height="360dp"
+		android:scaleType="fitXY"
+		android:contentDescription="@string/desc_derp_picture" />
     
-    <FrameLayout
+    <TextView
+        android:id="@+id/caption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal" >
+        android:layout_marginTop="4dp"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="10dp" >
         
-        <ImageView 
-	        android:id="@+id/member"
-	        android:layout_width="match_parent"
-	        android:layout_height="360dp"
-	        android:scaleType="fitXY"
-	        android:contentDescription="@string/desc_derp_picture" />
+        <ImageView
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+	 		android:src="@drawable/arrow_up_small"
+	 		android:contentDescription="@string/desc_vote_up" />
         
         <TextView
-            android:id="@+id/score"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right" />
+		    android:layout_height="wrap_content"
+		    android:layout_gravity="center_vertical"
+		    android:textColor="#00b200"
+		    android:textSize="16sp"
+		    android:textStyle="bold"
+		    android:text="21" />
         
-	</FrameLayout>
+        <ImageView
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginLeft="10dp"
+	 		android:src="@drawable/arrow_down_small"
+	 		android:contentDescription="@string/desc_vote_down" />
+        
+        <TextView
+            android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_gravity="center_vertical"
+		    android:textColor="#cc0000"
+		    android:textSize="16sp"
+		    android:textStyle="bold"
+		    android:text="43" />
+        
+    </LinearLayout>
+        
+	
 
 </LinearLayout>
