--- a/android/res/layout/fragment_view_team.xml
+++ b/android/res/layout/fragment_view_team.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:dividerHeight="0dp"
-        android:divider="@null" />
+        android:divider="@null"
+        android:listSelector="@android:color/transparent" />
 
 </LinearLayout>
