added comment layout to view member

--- a/android/res/layout/fragment_view_member.xml
+++ b/android/res/layout/fragment_view_member.xml
@@ -158,6 +158,14 @@
 	            android:src="@drawable/comment_icon"
 	            android:contentDescription="@string/desc_comment_icon" />
 	        
+	        <LinearLayout
+	            android:id="@+id/comment_container"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:orientation="vertical"
+	            android:paddingLeft="10dp" >
+	            
+	        </LinearLayout>
 	        
 	    </LinearLayout>
 	
