--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -15,6 +15,17 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="@android:style/Theme.Holo.Light">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    </style>
+    
+    <style name="comment_name">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#30acff</item>
+    </style>
+    
+    <style name="comment">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#000000</item>
     </style>
 
 </resources>
