--- a/android/res/layout/fragment_main.xml
+++ b/android/res/layout/fragment_main.xml
@@ -69,8 +69,7 @@
         android:layout_below="@id/picture_frame"
         android:layout_marginTop="4dp"
         android:gravity="center_horizontal"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textAppearance="@style/caption" />
     
     <LinearLayout
         android:layout_width="wrap_content"
