--- a/android/res/layout/listview_row_member.xml
+++ b/android/res/layout/listview_row_member.xml
@@ -44,7 +44,12 @@
         	android:layout_alignParentBottom="true"
         	android:layout_alignParentRight="true"
         	android:textSize="18sp"
-        	android:textStyle="bold" />
+        	android:textStyle="bold"
+        	android:paddingTop="7dp"
+        	android:paddingBottom="7dp"
+        	android:paddingLeft="10dp"
+        	android:paddingRight="10dp"
+        	android:background="@drawable/title_plaque" />
         
     </RelativeLayout>
         
@@ -61,8 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:gravity="center"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textAppearance="@style/caption" />
     
     <LinearLayout
         android:layout_width="match_parent"
