--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -17,14 +17,18 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     
-    <style name="comment_name">
+    <style name="caption">
+        <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">14sp</item>
+    </style>
+    
+    <style name="comment_name">
+        <item name="android:textSize">13sp</item>
         <item name="android:textColor">#30acff</item>
     </style>
     
     <style name="comment">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">13sp</item>
         <item name="android:textColor">#000000</item>
     </style>
 
