added popup window when adding comment

--- a/android/res/drawable/edittext_comment_bg.xml
+++ b/android/res/drawable/edittext_comment_bg.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle" >
     
     <solid
-        android:color="#d6d6d6" />
+        android:color="#fff" />
     
     <corners
         android:radius="14dp" />
