--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -17,6 +17,11 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     
+    <style name="AddCommentAnimation">
+    	<item name="android:windowEnterAnimation">@anim/slide_down</item>
+    	<item name="android:windowExitAnimation">@anim/slide_up</item>
+    </style>
+    
     <style name="caption">
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
