--- a/android/res/layout/fragment_view_member.xml
+++ b/android/res/layout/fragment_view_member.xml
@@ -179,9 +179,7 @@
 	            android:layout_width="match_parent"
 	            android:layout_height="wrap_content"
 	            android:orientation="vertical"
-	            android:paddingLeft="10dp" >
-	            
-	        </LinearLayout>
+	            android:paddingLeft="10dp" />
 	        
 	    </LinearLayout>
 	
