cleaned up code and added checks for internet availability

--- a/android/res/layout/fragment_view_member.xml
+++ b/android/res/layout/fragment_view_member.xml
@@ -75,6 +75,7 @@
 	        	android:paddingTop="4dp"
 	        	android:paddingBottom="4dp"
 	        	android:orientation="horizontal"
+	        	android:visibility="gone"
 	        	android:background="@drawable/transparent_gradient" >
 	        	
 	            <ImageView
