external pages before going to row

--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -21,17 +21,25 @@
 
 <div class="container">
     <div class="jumbotron">
-    	
-        <h1 >Derp Team</h1>
-        <h2> <small> Hey <b>{{ you }}</b>, your friend <b>{{ friend }}</b> has added someone to be on your team! Lucky you!</small></h2>
+        <img src="{% static "images/derpteam_logo.png" %}"/>
+        <h3>  Hey <b>{{ you }}</b>, your friend <b>{{ friend }}</b> has added someone to be on your team! Lucky you!</h3>
         <div class="span12 pagination-centered"><img class="img-thumbnail" src="http://{{ imageUrl}}" /></div>
-        
         <h2>	{{title}}</h2>
 		<h2> <small> {{caption}} </small></h2>
-
   	</div>
+</div>
 
-
+<div class="container">
+	<div class="row">
+	    <h3>Want to join the Alpha?</h3>
+    </div>
+    <div class="row">
+        <form class="form" role="form">   
+				<div class="col-md-3">
+                    <input type="email" class="form-control" id = "inputEmail" placeholder="joe.doe@email.com" />
+				</div>
+        </form>
+	</div>   
 </div>
 
    <!-- Main component for a primary marketing message or call to action -->
