aligned logo to center

--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -6,13 +6,16 @@
     <style>
 		.container{
 			padding-top: 50px;
-			margin:auto;
-			
+			margin:auto;	
 		}
 		
 		.im-centered{
 			margin: auto; 
 			max-width: 600px;
+		}
+
+		#logo {
+			margin: 0 auto;
 		}
 	</style>
 </header>
@@ -24,7 +27,7 @@
 <div class="container">
 	<div class ="im-centered">
         <div class="row">
-            <img class="img-responsive" src="{% static "images/derpteam_logo.png" %}"/>
+            <img class="img-responsive logo" src="{% static "images/derpteam_logo.png" %}"/>
         </div>
     </div>
     <div class="im-centered">
