--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -35,9 +35,11 @@
     <div class="im-centered">
         <div class="row"> <h3>  Hey <b>{{ you }}</b>, your friend <b>{{ friend }}</b> has added someone to be on your team! Lucky you!</h3></row>
 	</div>
-    <div class="im-centered"><div class="row">
-    
-        <img class="img-responsive img-thumbnail" src="http://{{ imageUrl}}" />
+    <div class="im-centered">
+	<div class="row">
+		<div class="col-md-2"></div>
+	  	<div class="col-md-8"><img class="img-responsive img-thumbnail" src="http://{{ imageUrl}}" /></div>
+	  	<div class="col-md-2"></div>
     </div></div>
     <div class="im-centered"><div class="row">
         <h2>	{{title}}</h2>
