trying to center text

--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -40,7 +40,7 @@
 	<br><br>
 
 	<div class="im-centered">
-		<div class="row"><h2>{{title}}</h2></div>
+		<div class="row text-center"><h2>{{title}}</h2></div>
 	</div>
 
 	<div class="im-centered">
@@ -52,7 +52,7 @@
 	</div>
  
     	<div class="im-centered">
-		<div class="row"><h2><small> {{caption}} </small></h2></div>
+		<div class="row text-center"><h2><small> {{caption}} </small></h2></div>
 	</div>
   	
 </div>
